# Open-Halo-HandLo-

./: .gitignore  Architecture.md  README.md
Docs/: AGENT_RULES.md  API_CONTRACTS.md  CONVENTIONS.md  DECISIONS.md  DEV_SETUP.md  ERROR_HANDLING.md  IMPLEMENTATION_PLAN.md  MVP.md  PLATFORM_GUIDE.md  PRD.md  STATE_MACHINE.md  STATE_MACHINES.md  TESTING.md  TESTING_STRATEGY.md  WIRE_PROTOCOL.md
apps/desktop/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/desktop/frontend/src/: app.html
apps/desktop/frontend/src/lib/: types.ts
apps/desktop/frontend/src/lib/gesture/: GestureClassifier.ts  HandTracker.ts  gestureStore.ts
apps/desktop/frontend/src/lib/stores/: gestureStore.ts  peerStore.ts  transferStore.ts
apps/desktop/frontend/src/lib/transfer/: tauribridge.ts
apps/desktop/frontend/src/lib/ui/: FileOrb.ts  (+1 more)
apps/desktop/frontend/src/routes/: +page.svelte
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: device.rs  discovery.rs  file.rs  mod.rs  pairing.rs  transfer.rs
apps/desktop/src-tauri/src/sidecar/: mod.rs
scripts/: build-release.sh  build.sh  dev.sh  setup.sh
sidecar/: go.mod  go.sum  main.go
sidecar/clipboard/: sync.go
sidecar/crypto/: aes.go  ctr.go  ecdh.go  hmac.go
sidecar/ipc/: protocol.go  router.go
sidecar/mdns/: discovery.go
sidecar/rest/: server.go  websocket.go
sidecar/session/: manager.go
sidecar/transfer/: chunker.go  receiver.go  tcp_receiver.go  tcp_sender.go
sidecar/webrtc/: crypto.go  manager.go
