[package]
name = "gestureshare"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-open", "fs-read-file", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rcgen = "0.12"           # Self-signed TLS cert generation
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "gestureshare"
path = "src/main.rs"
